# awscurl

./: CMakeLists.txt  CMakePresets.json  Dockerfile  HeaderValue.h  README.md  aws-api-notes.txt  awscurl.cpp  awscurl.sln  awscurl.vcxproj  awscurl.vcxproj.filters  build-notes.txt  pch.h  vcpkg.json
.github/: dependabot.yml
.github/workflows/: build-and-push-noble.yml  codeql.yml  retag-image.yml
